Fixed some math errors but there are still some issues

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   <div id="controls" style="display:flex; justify-content:center; align-items:center; gap:2em; margin-bottom:1.5em;">
     <label>alpha: <input type="number" id="alphaInput" value="3" step="1"></label>
     <label>beta: <input type="number" id="betaInput" value="2" step="1"></label>
-    <label>mult: <input type="number" id="multInput" value="34" step="1"></label>
-    <span>sam: <span id="samValue"></span></span>
+    <label>multiplier ('a'): <input type="number" id="multInput" value="34" step="1"></label>
+    <span>modulus: <span id="samValue"></span></span>
   </div>
   <div id="canvas-toggles" style="display:flex; justify-content:center; align-items:center; gap:2em; margin-bottom:1.5em;">
     <label><input type="checkbox" id="toggle0" checked> Planet Dance</label>
